# ats-footers

./: .clang-format  .dir-locals.el  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Pipfile  README.md  build.ps1  conanfile.py  deploy-windows.yaml
.gitlab/issue_templates/: bug.md  feature-request.md
atsfooters/: CMakeLists.txt
atsfooters/include/: atsfooters.hpp
atsfooters/src/: atsfooters.cpp  atsfooters_internal.cpp  atsfooters_internal.hpp  utils.hpp
atsfooters/tests/: test_atsfooters.cpp
dotnet-example/: AtsFootersExample.cs  Footers.cs  dotnet-example.csproj
dotnet-wrapper-generator/: Program.cs  dotnet-wrapper-generator.csproj
python-example/: atsfooters.py  example-atsfooters.py
